--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -31,7 +31,7 @@
 						<p><i>Человек, <u>(не)</u> умеющий </i>создавать<b> HTML</b></p> 
 					</div>
 					<div class="col-md-4">
-<img src="https://github.com/MalkOwlet/lingdata/blob/main/mywebpage/DSC_0012%20—%20копия.jpg" style="height:350px; margin:20px 20px 40px 20px; " >
+<img src="https://github.com/MalkOwlet/lingdata/blob/main/mywebpage/DSC_0012%20—%20копия.png" style="height:350px; margin:20px 20px 40px 20px; " >
 					</div>
 				</div>
 			</div>
